--- a/index.html
+++ b/index.html
@@ -1092,38 +1092,48 @@ calMuscleBtns.forEach(btn => {
   btn.addEventListener("mousedown", () => {
     btn.classList.add("active");
   });
-  btn.addEventListener("mouseup", () => {
-    // 선택 저장
-    const m = btn.dataset.muscle;
-    calSelectedMuscles = [m]; // 한 번에 하나
-    calData[calSelectedDate] = { muscles: calSelectedMuscles };
-    localStorage.setItem("workoutCalendar", JSON.stringify(calData));
 
-    // 달력 갱신
-    calRender();
-
-    // 팝업 닫기
-    calPopup.classList.add("hidden");
-  });
 
   // 모바일 터치 대응
   btn.addEventListener("touchstart", () => {
     btn.classList.add("active");
   });
-  btn.addEventListener("touchend", () => {
-    const m = btn.dataset.muscle;
-    calSelectedMuscles = [m];
-    calData[calSelectedDate] = { muscles: calSelectedMuscles };
-    localStorage.setItem("workoutCalendar", JSON.stringify(calData));
-    calRender();
-    calPopup.classList.add("hidden");
-  });
-
+  
   // 눌렀다 떼면 색 초기화 (선택한 버튼만 active 유지)
   btn.addEventListener("mouseleave", () => {
     btn.classList.remove("active");
   });
 });
+
+
+let calPopupOpen = false;
+
+function calOpenPopup(key) {
+  calSelectedDate = key;
+  calSelectedMuscles = calData[key]?.muscles || [];
+  calPopupDate.textContent = key;
+
+  calMuscleBtns.forEach(btn => {
+    btn.classList.toggle("active", calSelectedMuscles.includes(btn.dataset.muscle));
+  });
+
+  calPopup.classList.remove("hidden");
+  calPopupOpen = true;
+}
+
+// 버튼 클릭
+calMuscleBtns.forEach(btn => {
+  btn.addEventListener("mouseup", e => {
+    if (!calPopupOpen) return; // 팝업이 열린 상태에서만 실행
+    handleMuscleSelect(btn);
+  });
+  btn.addEventListener("touchend", e => {
+    if (!calPopupOpen) return;
+    handleMuscleSelect(btn);
+  });
+});
+
+
 
 
    
