--- a/index.html
+++ b/index.html
@@ -973,6 +973,25 @@ auth.onAuthStateChanged(async user=>{
         logoutBtn.style.display = 'none';
         userInfo.textContent = '';
     }
+
+   // 🔥 달력 데이터 불러오기
+try{
+  const calSnap = await db
+    .collection("users")
+    .doc(user.uid)
+    .collection("calendar")
+    .get();
+
+  calData = {};
+  calSnap.forEach(doc=>{
+    calData[doc.id] = doc.data(); // { muscles: [...] }
+  });
+
+  calRender();
+}catch(e){
+  console.error("calendar load err", e);
+}
+
 });
 
 
@@ -1020,10 +1039,10 @@ const calPopupDate = document.getElementById("calPopupDate");
 const calMuscleBtns = calPopup.querySelectorAll(".muscles button");
 
 let calCurrent = new Date();
-let calData = JSON.parse(localStorage.getItem("workoutCalendar")) || {};
 let calSelectedDate = null;
 let calSelectedMuscles = [];
-
+let calData = {}; // ✅ 여기
+   
 function calRender() {
    
    
@@ -1206,7 +1225,44 @@ function handleMuscleSelect(btn) {
     calData[calSelectedDate] = { muscles: calSelectedMuscles };
   }
 
-  localStorage.setItem("workoutCalendar", JSON.stringify(calData));
+async function handleMuscleSelect(btn) {
+  const m = btn.dataset.muscle;
+  const alreadySelected = calSelectedMuscles.includes(m);
+
+  calMuscleBtns.forEach(b => b.classList.remove("active"));
+
+  if (alreadySelected) {
+    delete calData[calSelectedDate];
+    calSelectedMuscles = [];
+  } else {
+    calSelectedMuscles = [m];
+    btn.classList.add("active");
+    calData[calSelectedDate] = { muscles: calSelectedMuscles };
+  }
+
+  // 🔥 Firestore 저장
+  const user = auth.currentUser;
+  if(user){
+    const ref = db
+      .collection("users")
+      .doc(user.uid)
+      .collection("calendar")
+      .doc(calSelectedDate);
+
+    if(calSelectedMuscles.length === 0){
+      await ref.delete();
+    } else {
+      await ref.set({
+        muscles: calSelectedMuscles
+      });
+    }
+  }
+
+  calRender();
+  calPopup.classList.add("hidden");
+}
+
+
   calRender();
   calPopup.classList.add("hidden");
 }
