--- a/index.html
+++ b/index.html
@@ -968,28 +968,92 @@ auth.onAuthStateChanged(async user=>{
             console.error('load records err', e);
         }
 
-if(user){
-  // 🔥 달력 데이터 불러오기
-  try{
-    const calSnap = await db
-      .collection("users")
-      .doc(user.uid)
-      .collection("calendar")
-      .get();
 
+auth.onAuthStateChanged(async user=>{
+  if(user){
+    googleLoginBtn.style.display = 'none';
+    logoutBtn.style.display = 'block';
+    userInfo.textContent = user.displayName || user.email || '';
+
+    // 🔹 3대 기록
+    try{
+      const threeSnap = await db
+        .collection('users')
+        .doc(user.uid)
+        .collection('threeRM')
+        .orderBy('createdAt', 'desc')
+        .limit(1)
+        .get();
+
+      if(!threeSnap.empty){
+        const data = threeSnap.docs[0].data();
+        benchRM.value = data.bench || 0;
+        squatRM.value = data.squat || 0;
+        deadRM.value = data.dead || 0;
+        updateTotal3();
+      }
+    }catch(e){
+      console.error('load threeRM err', e);
+    }
+
+    // 🔹 기록 로드
+    try{
+      const snap = await db
+        .collection('users')
+        .doc(user.uid)
+        .collection('records')
+        .orderBy('createdAt','desc')
+        .limit(200)
+        .get();
+
+      records.bench = [];
+      records.squat = [];
+      records.dead = [];
+
+      snap.forEach(doc=>{
+        const d = doc.data();
+        if(!d || !d.lift) return;
+
+        const item = {
+          firestoreId: doc.id,
+          date: d.date,
+          weight: d.weight,
+          reps: d.reps
+        };
+
+        if(d.lift === 'bench') records.bench.push(item);
+        if(d.lift === 'squat') records.squat.push(item);
+        if(d.lift === 'dead') records.dead.push(item);
+      });
+
+      renderActiveBox();
+    }catch(e){
+      console.error('load records err', e);
+    }
+
+    // 🔹 달력 데이터 로드
+    try{
+      const calSnap = await db
+        .collection("users")
+        .doc(user.uid)
+        .collection("calendar")
+        .get();
+
+      calData = {};
+      calSnap.forEach(doc=>{
+        calData[doc.id] = doc.data();
+      });
+
+      calRender();
+    }catch(e){
+      console.error("calendar load err", e);
+    }
+
+  } else {
     calData = {};
-    calSnap.forEach(doc=>{
-      calData[doc.id] = doc.data();
-    });
-
     calRender();
-  }catch(e){
-    console.error("calendar load err", e);
   }
-} else {
-  calData = {};
-  calRender();
-}
+});
 
    
 
@@ -1085,16 +1149,7 @@ if (isToday) {
        
     }
 
-    let timer;
-    cell.addEventListener("touchstart", () => {
-      timer = setTimeout(() => calOpenPopup(key), 500);
-    });
-    cell.addEventListener("touchend", () => clearTimeout(timer));
 
-    cell.addEventListener("mousedown", () => {
-      timer = setTimeout(() => calOpenPopup(key), 500);
-    });
-    cell.addEventListener("mouseup", () => clearTimeout(timer));
 
     calDaysEl.appendChild(cell);
   }
