--- a/index.html
+++ b/index.html
@@ -1104,6 +1104,7 @@ if (isToday) {
 
 let longPressTimer = null;
 let calPopupOpen = false;  // 팝업 열렸는지 체크
+let calPopupJustOpened = false; // 팝업 바로 열렸는지 체크
 
 
 
@@ -1180,21 +1181,24 @@ function calOpenPopup(key) {
 
   calPopup.classList.remove("hidden");
   calPopupOpen = true;
+  calPopupJustOpened = true;
 
-
+  // 250ms 후에 바로 열림 상태 해제
+  setTimeout(() => {
+    calPopupJustOpened = false;
+  }, 250);
+}
 
 // 버튼 클릭
 calMuscleBtns.forEach(btn => {
-
-calMuscleBtns.forEach(btn => {
-  btn.addEventListener("click", () => {
+  btn.addEventListener("mouseup", e => {
+    if (!calPopupOpen || calPopupJustOpened) return;
     handleMuscleSelect(btn);
   });
-});
-
-
-
-   
+  btn.addEventListener("touchend", e => {
+    if (!calPopupOpen || calPopupJustOpened) return;
+    handleMuscleSelect(btn);
+  });
 });
 
 
