--- a/index.html
+++ b/index.html
@@ -1190,16 +1190,15 @@ function calOpenPopup(key) {
 }
 
 // 버튼 클릭
+
 calMuscleBtns.forEach(btn => {
-  btn.addEventListener("mouseup", e => {
-    if (!calPopupOpen || calPopupJustOpened) return;
-    handleMuscleSelect(btn);
-  });
-  btn.addEventListener("touchend", e => {
-    if (!calPopupOpen || calPopupJustOpened) return;
+  btn.addEventListener("click", () => {
     handleMuscleSelect(btn);
   });
 });
+
+
+   
 
 
 
